WIP
-----------------------------
* Standings Widget
  - Renamed "show_time_gap_from_class_best" option to "show_time_gap_from_same_class", which now also shows time gap behind the same class leader in race session. This option is enabled by default, and only takes effect while `enable_multi_class_split_mode` is enabled.

2.31.0 (2025-07-08)
-----------------------------
* Fuel Calculator
  - [New]Add "Tyre" column to history table, which lists "average tyre tread wear" data that can be used for tyre wear calculation.
  - [New]Add tyre tread wear and lifespan calculation in laps, minutes, stints, which helps to plan tyre usage for multi-stint race. See "Fuel Calculator" section in User Guide for details.
  - [New]Add "Max stint laps" & "Max stint minutes" calculation, which shows maximum laps and minutes can run per stint based on "Tank capacity" value (or 100% capacity for virtual energy).

* Consumption History
  - [New]Add "average tyre tread wear" logging via Fuel Module, which is used in Fuel Calculator.

* Wheels Module
  - Brake and tyre wear calculation is now handled by Wheels Module.
  - [New]Add delta wear calculation for accurately estimating tyre wear difference per lap.
  - [New]Add "minimum_delta_distance" option for delta wear data recording.

* Tyre Wear Widget
  - [New]Add "show_end_stint_remaining" option, which shows estimated total remaining tyre tread at the end of current stint. This option helps to determine whether there is enough tread for current or more stints. Negative reading indicates that there will not be enough tyre tread remaining at the end of current stint.
  - "show_wear_difference" option now shows estimated tyre wear difference per lap (at least one valid lap is required).
  - Removed "show_live_wear_difference", "freeze_duration" options. 

* Brake Wear Widget
  - "show_wear_difference" option now shows estimated brake wear difference per lap (at least one valid lap is required).